FAQ heading spacing | Early bird tooltip copy fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -162,7 +162,7 @@ p {
 
 .set-why-attend-faq h3 {
   padding-bottom: 10px;
-  padding-top: 50px;
+  padding-top: 100px;
   font-size: 14pt;
   letter-spacing: 4px;
   border-bottom: 3px solid #f44336;
